k8ss/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: softpos-gateway
  namespace: softpos
spec:
  # The selector matches the ingress gateway pod labels.
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: softpos-virtual
  namespace: softpos
spec:
  hosts:
  - "*"
  gateways:
  - softpos-gateway
  http:
  - match:
    - uri:
        prefix: "/"  # Forward all traffic to frontend-external
        #prefix: "/auth/portal"
    route:
    - destination:
        #host: softpos-api-gateway.softpos.svc.cluster.local
        host: softpos-api-gateway
        port:
          number: 8082
      # headers:
      #   request:
      #     add:
      #       x-api-key: TESTKEYVALU
